# Auto-Agent-Designer

./: .env.example  .gitignore  LICENSE  README.md  architecture_diagram  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  ci.yml  lint.yml
data/: missions.yml
data/sample_inputs/: brainstorm_topic.txt  comments_stream.txt  research_note.txt
data/sample_outputs/: example_agentspecs.json  example_leaderboard.json  example_metrics.json
notebooks/: analysis.ipynb  demo.ipynb  experiments.ipynb
scripts/: build_leaderboard.py  export_results.py  run_mission.py
src/: __init__.py
src/agents/: __init__.py  base.py  classifier_agent.py  coordinator_agent.py  executor_agent.py  planner_agent.py  registry.py  simple_agent.py
src/eval/: __init__.py  evaluator.py  leaderboard.py  metrics.py  simulator.py
src/infra/: __init__.py  config.py  dockerfile  logger.py  run_demo.sh
src/meta_agent/: __init__.py  generator.py  llm_client.py  memory.py  retriever.py
src/meta_agent/prompts/: agent_design.txt  mission_parse.txt  test_generation.txt
tests/: test_base_agent.py  test_generator.py  test_metrics.py  test_simple_agent.py  test_simulator.py
